src- Version 4.19/objects/Revenue_Recognition_Rule__c.object
<CustomObject>
    <fields>
        <fullName>First_Manual_Schedule_Date__c</fullName>
        <label>First Manual Schedule Date</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Schedule_Date__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Manual_Schedule_Month__c</fullName>
        <label>First Manual Schedule Month #</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Month__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Manual_Schedules__c</fullName>
        <label>No of Manual Schedules</label>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recognition_Date__c</fullName>
        <label>Recognition Date</label>
        <picklist>
            <controllingField>Recognition_Type__c</controllingField>
            <picklistValues>
                <fullName>Service Activation Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Recognition Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Recognition End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily Recognition Over Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Recognition Over Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Recognition on Specific Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Monthly Recognition Over Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Schedule_Total__c</fullName>
        <label>Revenue Recognition Schedule - Total %</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Revenue_Percent__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Revenue Recognition Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Recognition_Type__c</columns>
        <columns>Recognition_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Revenue Recognition Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RevRec_Schedules_only_for_Manual</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(Recognition_Type__c, &apos;Manual Recognition&apos;)
&amp;&amp;
No_of_Manual_Schedules__c &gt; 0</errorConditionFormula>
        <errorMessage>Revenue Recognition Schedules can be created only for Revenue Recognition Rule of type &apos;Manual Recognition&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RevRec_Schedules_total_cant_exceed_100</fullName>
        <active>true</active>
        <description>The total % rollup from the manual schedules should be &lt;= 100%</description>
        <errorConditionFormula>Revenue_Recognition_Schedule_Total__c &gt; 1</errorConditionFormula>
        <errorMessage>The total % from the all the Revenue Recognition Schedules for your Revenue Recognition Rule cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>